# brain-diagnostics

./: .gitignore  CMakeLists.txt  README.md  brain-diagnostics-pico-2.uf2  brain-diagnostics-pico.uf2  brain-diagnostics-pico2.uf2  build-firmware.sh  diagnostics.cpp  diagnostics.h  gpio-test.cpp  inputs.cpp  inputs.h  main.cpp  outputs.cpp  outputs.h  pots_and_buttons.cpp  pots_and_buttons.h  tests.cpp  tests.h
